hero.scss fix z-index

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -12,7 +12,8 @@
         #25cbff,
         #40d8ff
     );
-    z-index: -1;
+
+    z-index: 1;
 
     @media (max-width: 1152px) {
         padding-top: 200px;
